Refactored score_analysis_demo.ipynb

--- a/demos/score_analysis_demo.ipynb
+++ b/demos/score_analysis_demo.ipynb
@@ -7,7 +7,6 @@
    "outputs": [],
    "source": [
     "from tomato.symbolic.symbtranalyzer import SymbTrAnalyzer\n",
-    "from tomato.metadata.work import Work\n",
     "import os\n",
     "from pprint import pprint\n"
    ]
@@ -46,16 +45,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Automatic pdb calling has been turned ON\n",
       "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 8.74 seconds to execute.\n"
+      "  The call took 9.23 seconds to execute.\n"
      ]
     }
    ],
    "source": [
-    "%pdb\n",
-    "score_data = scoreAnalyzer.analyze(\n",
-    "    txt_filename, None, symbtr_name=symbtr_name)\n"
+    "score_data = scoreAnalyzer.analyze(txt_filename, None, symbtr_name=symbtr_name)\n"
    ]
   },
   {
@@ -82,12 +78,12 @@
       "           'source': 'http://musicbrainz.org/work/e7924b0d-c8a0-4b4a-b253-8eec898eac1e',\n",
       "           'symbtr_slug': 'ussak'},\n",
       " 'number_of_notes': 680,\n",
-      " 'recordings': [{'mbid': '86721a3a-268f-4422-8803-73a196d2a571',\n",
-      "                 'title': 'Uşşak Sazsemaisi'},\n",
-      "                {'mbid': '9a7d391f-90a6-4f2d-a0d2-5e6a5365b149',\n",
+      " 'recordings': [{'mbid': '9a7d391f-90a6-4f2d-a0d2-5e6a5365b149',\n",
       "                 'title': 'Uşşak Saz Semaisi'},\n",
       "                {'mbid': '9b869a16-0ab0-43a2-a51e-2a03e9484e70',\n",
       "                 'title': 'Uşşak Saz Semaisi'},\n",
+      "                {'mbid': '86721a3a-268f-4422-8803-73a196d2a571',\n",
+      "                 'title': 'Uşşak Sazsemaisi'},\n",
       "                {'mbid': 'f970f1e0-0be9-4914-8302-709a0eac088e',\n",
       "                 'title': 'Uşşak Sazsemaisi'}],\n",
       " 'symbtr_name': 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede',\n",
@@ -117,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -125,51 +121,66 @@
      "output_type": "stream",
      "text": [
       "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 9.09 seconds to execute.\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "type object 'Work' has no attribute 'get_mbids'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-a97864e2a475>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;31m# Note 2: very rare but there can be more that one mbid returned. We are going to use\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m#         the first work to get fetch the metadata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mmbid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mWork\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_mbids\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msymbtr_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;31m# Extract the (meta)data from the SymbTr scores\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: type object 'Work' has no attribute 'get_mbids'"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> \u001b[0;32m<ipython-input-5-a97864e2a475>\u001b[0m(9)\u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m      7 \u001b[0;31m\u001b[0;31m# Note 2: very rare but there can be more that one mbid returned. We are going to use\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m      8 \u001b[0;31m\u001b[0;31m#         the first work to get fetch the metadata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m----> 9 \u001b[0;31m\u001b[0mmbid\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mWork\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_mbids\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msymbtr_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m     10 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m     11 \u001b[0;31m\u001b[0;31m# Extract the (meta)data from the SymbTr scores\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n"
+      "  The call took 8.07 seconds to execute.\n"
      ]
     }
    ],
    "source": [
-    "# Automatic phrase segmentation on the SymbTr-txt score using pre-trained model\n",
-    "phrase_bounds = scoreAnalyzer.segment_phrase(txt_filename, symbtr_name=symbtr_name)\n",
+    "from tomato.metadata.symbtr import SymbTr as SymbTrMetadata\n",
+    "from tomato.symbolic.symbtr.reader.txt import TxtReader\n",
+    "from tomato.symbolic.symbtr.reader.mu2 import Mu2Reader\n",
+    "from tomato.symbolic.symbtr.dataextractor import DataExtractor\n",
+    "from tomato.symbolic.symbtr.section import SectionExtractor\n",
+    "from tomato.symbolic.symbtr.segment import SegmentExtractor\n",
+    "from tomato.symbolic.symbtr.rhythmicfeature import RhythmicFeatureExtractor\n",
     "\n",
     "# relevant recording or work mbid, if you want additional information from musicbrainz\n",
     "# Note 1: MBID input will make the function returns significantly slower because we\n",
     "#         have to wait a couple of seconds before each subsequent query from MusicBrainz.\n",
     "# Note 2: very rare but there can be more that one mbid returned. We are going to use \n",
     "#         the first work to get fetch the metadata\n",
-    "mbid = Work.get_mbids(symbtr_name)[0]\n",
+    "mbid = SymbTrMetadata.get_mbids_from_symbtr_name(symbtr_name)[0]\n",
     "\n",
-    "# Extract the (meta)data from the SymbTr scores\n",
-    "# This includes the metadata from the score formats and MusicBrainz, extracted sections\n",
-    "# rhythmic structure etc.\n",
-    "score_features, validity = scoreAnalyzer.extract_data(\n",
-    "    txt_filename, mu2_filename, symbtr_name=symbtr_name, mbid=mbid, \n",
-    "    segment_note_bound_idx=phrase_bounds['boundary_note_idx'])\n"
+    "# read the txt score\n",
+    "txt_score, is_score_content_valid = TxtReader.read(\n",
+    "    txt_filename, symbtr_name=symbtr_name)\n",
+    "\n",
+    "# read metadata from musicbrainz\n",
+    "mb_metadata, is_mb_metadata_valid = SymbTrMetadata.from_musicbrainz(\n",
+    "    symbtr_name, mbid=score_data['mbid'])\n",
+    "\n",
+    "# add duration & number of notes\n",
+    "mb_metadata['duration'] = {\n",
+    "    'value': sum(score_data['score']['duration']) * 0.001, 'unit': 'second'}\n",
+    "mb_metadata['number_of_notes'] = len(txt_score['duration'])\n",
+    "\n",
+    "# read metadata from the mu2 header\n",
+    "mu2_header, header_row, is_mu2_header_valid = Mu2Reader.read_header(\n",
+    "    mu2_filename, symbtr_name=symbtr_name)\n",
+    "\n",
+    "# merge metadata\n",
+    "score_metadata = DataExtractor.merge(mb_metadata, mu2_header)\n",
+    "\n",
+    "# sections\n",
+    "section_extractor = SectionExtractor()\n",
+    "sections, is_section_data_valid = section_extractor.from_txt_score(\n",
+    "    txt_score, symbtr_name)\n",
+    "\n",
+    "# annotated phrases\n",
+    "segment_extractor = SegmentExtractor()\n",
+    "phrase_annotations = segment_extractor.extract_phrases(\n",
+    "    txt_score, sections=sections)\n",
+    "\n",
+    "# Automatic phrase segmentation on the SymbTr-txt score using pre-trained model\n",
+    "segment_bounds = scoreAnalyzer.segment_phrase(txt_filename, symbtr_name=symbtr_name)\n",
+    "segments = segment_extractor.extract_segments(\n",
+    "    txt_score,\n",
+    "    segment_bounds['boundary_note_idx'],\n",
+    "    sections=sections)\n",
+    "\n",
+    "# rhythmic structure\n",
+    "rhythmic_structure = RhythmicFeatureExtractor.extract_rhythmic_structure(\n",
+    "    txt_score)"
    ]
   }
  ],
@@ -189,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
