Fixed makam tonic model

--- a/tomato/models/makam_tonic_estimation/pcd_to_pickle_model.ipynb
+++ b/tomato/models/makam_tonic_estimation/pcd_to_pickle_model.ipynb
@@ -26,7 +26,28 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read 1000 training files\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['../../../../../experiments/makam_recognition_experiments/data/features/pcd--7_5--15_0/135415d2-0df5-454a-bd14-d0482d558390--pdf.json',\n",
+       " '../../../../../experiments/makam_recognition_experiments/data/features/pcd--7_5--15_0/88e95b47-aa5a-4a45-ad7a-51b68138affc--pdf.json',\n",
+       " '../../../../../experiments/makam_recognition_experiments/data/features/pcd--7_5--15_0/c79290ea-2b38-41d1-ae53-bce6c12682d1--pdf.json',\n",
+       " '../../../../../experiments/makam_recognition_experiments/data/features/pcd--7_5--15_0/9df6ac0f-60fa-4ffa-ac25-a1300c5d5e07--pdf.json',\n",
+       " '../../../../../experiments/makam_recognition_experiments/data/features/pcd--7_5--15_0/02fa6e35-2962-4ef4-9f75-bf8d712f9c07--pdf.json']"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# get the training data with the best performing parameters\n",
     "parameter_str = 'pcd--7_5--15_0'\n",
@@ -35,7 +56,10 @@
     "training_folder = os.path.join(experiment_folder, parameter_str)\n",
     "\n",
     "# get the relevant files storing the data points\n",
-    "training_files = glob.glob(training_folder + '/*pdf.json')\n"
+    "training_files = glob.glob(training_folder + '/*pdf.json')\n",
+    "\n",
+    "print(\"Read %d training files\" % (len(training_files)))\n",
+    "display(training_files[:5])"
    ]
   },
   {
