--- a/demos/audio_analysis_demo.ipynb
+++ b/demos/audio_analysis_demo.ipynb
@@ -8,8 +8,9 @@
    "source": [
     "import os\n",
     "import copy\n",
-    "from tomato.audio.audioanalyzer import AudioAnalyzer\n",
-    "from matplotlib import pyplot as plt\n"
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "from tomato.audio.audioanalyzer import AudioAnalyzer\n"
    ]
   },
   {
@@ -43,11 +44,11 @@
      "output_type": "stream",
      "text": [
       "- Getting relevant metadata of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 1.32 seconds to execute.\n",
+      "  The call took 1.35 seconds to execute.\n",
       "- Extracting predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 40.48 seconds to execute.\n",
+      "  The call took 43.13 seconds to execute.\n",
       "- Filtering predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 7.12 seconds to execute.\n",
+      "  The call took 7.03 seconds to execute.\n",
       "- Computing pitch distribution of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
       "  The call took 0.05 seconds to execute.\n",
       "- Computing pitch class distribution of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
@@ -55,13 +56,13 @@
       "  The call took 0.05 seconds to execute.\n",
       "  The call took 0.05 seconds to execute.\n",
       "- Identifying tonic from the predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 0.40 seconds to execute.\n",
+      "  The call took 0.42 seconds to execute.\n",
       "- Identifying the transposition of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
       "  The call took 0.00 seconds to execute.\n",
       "- Computing the note models for ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
       "  The call took 0.05 seconds to execute.\n",
       "- Computing the melodic progression model of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 2.57 seconds to execute.\n"
+      "  The call took 2.74 seconds to execute.\n"
      ]
     },
     {
@@ -105,21 +106,21 @@
      "output_type": "stream",
      "text": [
       "- Getting relevant metadata of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 1.32 seconds to execute.\n",
+      "  The call took 1.29 seconds to execute.\n",
       "- Extracting predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 39.22 seconds to execute.\n",
+      "  The call took 42.12 seconds to execute.\n",
       "- Filtering predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 6.76 seconds to execute.\n",
+      "  The call took 7.03 seconds to execute.\n",
       "- Computing pitch distribution of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
       "  The call took 0.05 seconds to execute.\n",
       "- Identifying tonic from the predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 0.37 seconds to execute.\n",
+      "  The call took 0.44 seconds to execute.\n",
       "- Identifying the transposition of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
       "  The call took 0.00 seconds to execute.\n",
       "- Computing the note models for ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
       "  The call took 0.05 seconds to execute.\n",
       "- Computing the melodic progression model of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "  The call took 2.45 seconds to execute.\n"
+      "  The call took 2.54 seconds to execute.\n"
      ]
     }
    ],
