Moved sample-data from demos/ussak--... to sample-data

--- a/demos/score_analysis_demo.ipynb
+++ b/demos/score_analysis_demo.ipynb
@@ -17,13 +17,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# symbtr name, \n",
-    "# it is needed if the filename is modified from the SymbTr naming convention\n",
+    "data_folder = os.path.join('..', 'sample-data')\n",
+    "\n",
+    "# symbtr name is needed if the filename is modified from the SymbTr naming convention\n",
+    "score_folder = 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede'\n",
     "symbtr_name = 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede'\n",
     "\n",
     "# score filepaths\n",
-    "txt_filename = os.path.join(symbtr_name, symbtr_name + '.txt')\n",
-    "mu2_filename = os.path.join(symbtr_name, symbtr_name + '.mu2')\n",
+    "txt_filename = os.path.join(data_folder, score_folder, symbtr_name + '.txt')\n",
+    "mu2_filename = os.path.join(data_folder, score_folder, symbtr_name + '.mu2')\n",
     "\n",
     "# instantiate analyzer object\n",
     "scoreAnalyzer = SymbTrAnalyzer(verbose=True)\n"
@@ -45,8 +47,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 8.77 seconds to execute.\n"
+      "- Automatic phrase segmentation on the SymbTr-txt file: ../sample-data/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
+      "  The call took 9.77 seconds to execute.\n"
      ]
     }
    ],
@@ -131,8 +133,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 8.84 seconds to execute.\n"
+      "- Automatic phrase segmentation on the SymbTr-txt file: ../sample-data/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
+      "  The call took 9.37 seconds to execute.\n"
      ]
     }
    ],
@@ -211,7 +213,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
