--- a/demos/score_conversion_demo.ipynb
+++ b/demos/score_conversion_demo.ipynb
@@ -17,19 +17,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data_folder = os.path.join('..', 'sample-data')\n",
+    "\n",
     "# score filepaths\n",
     "score_folder = 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede'\n",
     "symbtr_name = 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede'\n",
     "work_mbid = 'e7924b0d-c8a0-4b4a-b253-8eec898eac1e'\n",
     "\n",
     "# input files\n",
-    "txt_filename = os.path.join(score_folder, symbtr_name + '.txt')\n",
-    "mu2_filename = os.path.join(score_folder, symbtr_name + '.mu2')\n",
+    "txt_filename = os.path.join(data_folder, score_folder, symbtr_name + '.txt')\n",
+    "mu2_filename = os.path.join(data_folder, score_folder, symbtr_name + '.mu2')\n",
     "\n",
     "# outputs \n",
-    "xml_filename = os.path.join(score_folder, symbtr_name + '.xml')\n",
-    "ly_filename = os.path.join(score_folder, symbtr_name + '.ly')\n",
-    "svg_filename_template = os.path.join(score_folder, symbtr_name)\n",
+    "xml_filename = os.path.join(data_folder, score_folder, symbtr_name + '.xml')\n",
+    "ly_filename = os.path.join(data_folder, score_folder, symbtr_name + '.ly')\n",
+    "svg_filename_template = os.path.join(data_folder, score_folder, symbtr_name)\n",
     "\n",
     "# parameters\n",
     "render_metadata = True  # Add the metadata stored in MusicXML to Lilypond\n",
@@ -105,7 +107,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
